packages/wix-storybook-utils/src/LiveCodeExample/index.scss
@import '../mixins.scss';
@import '../common.scss';

.wrapper {
  min-width: 894px;
  max-width: 1254px;

  margin-bottom: 20px;
  border: 1px solid #DFE5EB;
  border-radius: 3px;

  &.compact {
    min-width: auto;
    width: 100%;
    border: 0;
  }
}

.header {
  @extend .commonText;
  display: flex;
  align-items: center;
  border-bottom: 1px solid #DFE5EB;
  padding: 0 1em;

  .compact & {
    height: 3em;
    border: 0;
    padding: 0;
  }

  .spacer {
    flex: 1;
  }
}

.headerControl {
  margin-right: 20px;
  display: flex;
  align-items: center;
  line-height: 0;

  // Hide toggles on compact mode
  .compact & {
    display: none;
  }
}

.liveExampleWrapper {
  display: flex;

  // Stack on top when in compact mode
  .compact & {
    flex-direction: column;
    border-radius: 6px;
    box-shadow: 0px 0px 0px 4px #F0F4F7;
    margin-bottom: 5px;
  }
}

.editor,
.preview {
  box-sizing: border-box;
  width: 50%;
  position: relative;

  // Take all width in compact mode
  .compact & {
    width: 100%;

    border-radius: 6px;
    box-shadow: 0px 0px 0px 4px #F0F4F7;
  }
}

.editor {
  border-right: 1px solid #DFE5EB;
  background-color: #F8FAFB;

  .compact & {
    border-right: 0;
    box-shadow: none;

    &.opened {
      margin-bottom: 4px;
      box-shadow: inherit;
    }
  }
}

.editorView {
  padding: 20px;
  height: 100%;
  margin: 0;
  overflow: auto;
  outline: 0;
  font-family: Consolas, Menlo, Monaco, "Andale Mono WT", "Andale Mono", "Lucida Console", "Lucida Sans Typewriter", "DejaVu Sans Mono", "Bitstream Vera Sans Mono", "Liberation Mono", "Nimbus Mono L", "Courier New", Courier, monospace;

  // Auto height when in compact mode
  .compact & {
    min-height: auto;
    height: auto;
  }

  // Theme extracted from
  // https://github.com/PrismJS/prism-themes/blob/master/themes/prism-base16-ateliersulphurpool.light.css
  :global {
    pre[class*="language-"] {
      margin: .5em 0;
      overflow: auto;
    }

    /* Inline code */
    :not(pre) > code[class*="language-"] {
      padding: .1em;
      border-radius: .3em;
    }

    .token.comment,
    .token.prolog,
    .token.doctype,
    .token.cdata {
      color: #898ea4;
    }

    .token.punctuation {
      color: #5e6687;
    }

    .token.namespace {
      opacity: .7;
    }

    .token.operator,
    .token.boolean,
    .token.number {
      color: #c76b29;
    }

    .token.property {
      color: #c08b30;
    }

    .token.tag {
      color: #3d8fd1;
    }

    .token.string {
      color: #22a2c9;
    }

    .token.selector {
      color: #6679cc;
    }

    .token.attr-name {
      color: #c76b29;
    }

    .token.entity,
    .token.url,
    .language-css .token.string,
    .style .token.string {
      color: #22a2c9;
    }

    .token.attr-value,
    .token.keyword,
    .token.control,
    .token.directive,
    .token.unit {
      color: #ac9739;
    }

    .token.statement,
    .token.regex,
    .token.atrule {
      color: #22a2c9;
    }

    .token.placeholder,
    .token.variable {
      color: #3d8fd1;
    }

    .token.deleted {
      text-decoration: line-through;
    }

    .token.inserted {
      border-bottom: 1px dotted #202746;
      text-decoration: none;
    }

    .token.italic {
      font-style: italic;
    }

    .token.important,
    .token.bold {
      font-weight: bold;
    }

    .token.important {
      color: #c94922;
    }

    .token.entity {
      cursor: help;
    }
  }
}

.preview {
  padding: 30px 20px;
  @include checkerboard(20px, #eff2f6, #fff);

  &.darkPreview {
    @include checkerboard(20px, #5b7fa4, #486684);
  }
}

.error {
  position: absolute;
  bottom: 0;
  left: 0;
  right: 0;
  background: #ff5555;
  color: #ffffff;
  padding: 10px;
  white-space: pre;

  .compact & {
    top: 0;
    height: 100%;
    overflow: auto;
  }
}

